vbnc/vbnc/vbnc/tests/Errors/32103.vb
Namespace Constraint1
    Class A(Of Z As {Structure, New})

    End Class
End Namespace